--- a/prac_07/convert_miles_km.kv
+++ b/prac_07/convert_miles_km.kv
@@ -7,12 +7,17 @@ BoxLayout:
             text: '34'
         BoxLayout:
             orientation: 'vertical'
+            size_hint_x: 0.25
             Button:
                 text: 'Up'
+                on_press: app.handle_increment(input_number.text, 1)
             Button:
                 text: 'Down'
+                on_press: app.handle_increment(input_number.text, -1)
     Button:
         text: 'Convert m to km'
+        on_press: app.handle_convert(input_number.text)
     Label:
         id: output_label
         text: '54.717'
+        color: (1, 1, 0, 1)
