--- a/prac_07/convert_miles_km.kv
+++ b/prac_07/convert_miles_km.kv
@@ -5,18 +5,19 @@ BoxLayout:
         TextInput:
             id: input_number
             text: '34'
+            on_text: app.handle_convert()
         BoxLayout:
             orientation: 'vertical'
             size_hint_x: 0.25
             Button:
                 text: 'Up'
-                on_press: app.handle_increment(input_number.text, 1)
+                on_press: app.handle_increment(1)
             Button:
                 text: 'Down'
-                on_press: app.handle_increment(input_number.text, -1)
-    Button:
-        text: 'Convert m to km'
-        on_press: app.handle_convert(input_number.text)
+                on_press: app.handle_increment(-1)
+#    Button:
+#        text: 'Convert m to km'
+#        on_press: app.handle_convert()
     Label:
         id: output_label
         text: '54.717'
